--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body{
+	margin: 0 0 100px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777777;
 	line-height: 150%;
@@ -42,7 +48,16 @@ nav ul li a {
 	text-decoration: none;
 	color: #777777;
 }
+nav ul li a:hover {
+	font-weight: bold;
+	color: #b7b7b7;
+}
 
+/*nav ul li a:visited {
+	font-weight: normal;
+	color: #b7b7b7;
+}
+*/
 main { 
 	margin: auto;
 	width: 960px;
@@ -113,6 +128,10 @@ footer {
 	margin-top: 40px;
 	width: 100%;
 	color: #fff;
+	position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 /* logo*/
 h1 {
@@ -209,6 +228,18 @@ p {
 	letter-spacing: .75px;
 	color: #fff;
 	background-color: #4aaaa5;
+	padding: 20px;
+	position: absolute;
+	bottom: 15px;
+	width: 100%;
+}
+
+.gallery_label:hover {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	text-align: center;
+	letter-spacing: .75px;
+	color:  #4aaaa5;
+	background-color: #B5F6F3;
 	padding: 20px;
 	position: absolute;
 	bottom: 15px;
